--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
   <body>
     <h1>Hello Git</h1>
-    <h1>contoh</h1>
+    <h1>contoh User 1</h1>
+    <h1>contoh User 2</h1>
   </body>
 </html>
